# msv4-utils

./: CHANGELOG.rst  LICENSE  README.md  pyproject.toml  tbump.toml
.github/workflows/: ci.yml  release.yml  tests.yml
src/msv4_utils/: __init__.py  cli.py  msv4_types.py  uri.py
tests/: test_uri.py
